# GeoFileEditor

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
src/: DtypeUtils.py  FileUtils.py  GeoUtils.py  geotype.py
src/gui/: MainWindow.py  Table.py  toasts.py
src/utils/: GeoData.py
